<resources>
    <string name="app_name">Minoo</string>
    <string name="start_games_text">Start</string>
    <string name="title_activity_nature_herbs">Herbs</string>
    <string name="home_text">Games</string>
    <string name="category_text">Categories</string>
    <string name="quiz_text"> </string>
    <string name="question_text">Placeholder question</string>
    <string name="text_on_pic">Text On Picture</string>
    <string name="sort_text">Armadillo</string>
    <string name="q_button_text">Continue</string>
    <string name="animals">Animals</string>
    <string name="nature">Nature</string>
    <string name="flags">Flags</string>
    <string name="capitals">Capitals</string>
    <string name="math">Math</string>
    <string name="words">Words</string>
    <string name="mammals">Mammals</string>
    <string name="birds">Birds</string>
    <string name="flowers">Flowers</string>
    <string name="herbs">Herbs</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="oceania">Oceania</string>
    <string name="south_america">South America</string>
    <string name="north_america">North America</string>
    <string name="europe">Europe</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="geometry">Geometry</string>
    <string name="pic_to_word">Picture to word</string>
    <string name="word_to_pic">Word to picture</string>
    <string name="spelling">Spelling</string>
    <string name="animal_question">Choose the image picturing the \n</string>
    <string name="nature_question">Choose the image picturing the \n</string>
    <string name="math_question">Choose the correct answer to the problem \n</string>
    <string name="flag_question">Choose the flag belonging to \n</string>
    <string name="capital_question">What is the capital of \n</string>
    <string name="words_question">Choose the correct picture for \n</string>
    <string name="an_bi_blackbird">Blackbird</string>
    <string name="an_bi_bluetit">Blue tit</string>
    <string name="an_bi_bullfinch">Bullfinch</string>
    <string name="an_bi_chaffinch">Chaffinch</string>
    <string name="an_bi_dove">Dove</string>
    <string name="an_bi_greenfinch">Green finch</string>
    <string name="an_bi_housesparrow">House sparrow</string>
    <string name="an_bi_kestrel">Kestrel</string>
    <string name="an_bi_longtailedtit">Long-tailed tit</string>
    <string name="an_bi_nuthatch">Nuthatch</string>
    <string name="an_bi_robins">Robins</string>
    <string name="an_bi_wagtail">Wagtail</string>
    <string name="an_bi_waxwing">Waxwing</string>
    <string name="an_bi_willowwarbler">Willow warbler</string>
    <string name="an_bi_woodpecker">Woodpecker</string>
    <string name="an_ma_african_wild_dog">African wild dog</string>
    <string name="an_ma_armadillo">Armadillo</string>
    <string name="an_ma_baboon">Baboon</string>
    <string name="an_ma_bear">Bear</string>
    <string name="an_ma_bengal_tiger">Bengal Tiger</string>
    <string name="an_ma_bighorn_sheep">Bighorn Sheep</string>
    <string name="an_ma_bobcat">Bobcat</string>
    <string name="an_ma_buffalo">Buffalo</string>
    <string name="an_ma_camel">Camel</string>
    <string name="an_ma_cheetah">Cheetah</string>
    <string name="an_ma_chimpanzee">Chimpanzee</string>
    <string name="an_ma_dolphin">Dolphin</string>
    <string name="an_ma_donkey">Donkey</string>
    <string name="an_ma_elephant">Elephant</string>
    <string name="an_ma_ferret">Ferret</string>
    <string name="an_ma_fox">Fox</string>
    <string name="an_ma_giraffe">Giraffe</string>
    <string name="an_ma_guinea_pig">Guinea Pig</string>
    <string name="an_ma_hippopotamus">Hippopotamus</string>
    <string name="an_ma_koala">Koala</string>
    <string name="an_ma_lemur">Lemur</string>
    <string name="an_ma_lion">Lion</string>
    <string name="an_ma_moose">Moose</string>
    <string name="an_ma_mouse">Mouse</string>
    <string name="an_ma_orca">Orca</string>
    <string name="an_ma_panda">Panda</string>
    <string name="an_ma_rabbit">Rabbit</string>
    <string name="an_ma_raccoon">Raccoon</string>
    <string name="an_ma_red_panda">Red Panda</string>
    <string name="an_ma_riesen">Riesen</string>
    <string name="an_ma_seal">Seal</string>
    <string name="an_ma_sheep">Sheep</string>
    <string name="an_ma_squirrel">Squirrel</string>
    <string name="an_ma_surikat">Surikat</string>
    <string name="an_ma_wallaby">Wallaby</string>
    <string name="an_ma_walrus">Walrus</string>
    <string name="an_ma_wolf">Wolf</string>
    <string name="an_ma_zebra">Zebra</string>
    <string name="na_fl_chrysanthemum">Chrysanthemum</string>
    <string name="na_fl_coltsfoot">Coltsfoot</string>
    <string name="na_fl_cornflower">Cornflower</string>
    <string name="na_fl_crocus">Crocus</string>
    <string name="na_fl_daffodil">Daffodil</string>
    <string name="na_fl_dahlia">Dahlia</string>
    <string name="na_fl_daisy">Daisy</string>
    <string name="na_fl_dandelion">Dandelion</string>
    <string name="na_fl_gerbera">Gerbera</string>
    <string name="na_fl_hydrangea">Hydrangea</string>
    <string name="na_fl_iris">Iris</string>
    <string name="na_fl_lilac">Lilac</string>
    <string name="na_fl_lily">Lily</string>
    <string name="na_fl_lily_of_the_valley">Lily of the Valley</string>
    <string name="na_fl_pelargonium">Pelargonium</string>
    <string name="na_fl_petunia">Petunia</string>
    <string name="na_fl_poppy">Poppy</string>
    <string name="na_fl_snowdrop">Snowdrop</string>
    <string name="na_fl_sunflower">Sunflower</string>
    <string name="na_fl_tulip">Tulip</string>
    <string name="na_he_basil">Basil</string>
    <string name="na_he_chervil">Chervil</string>
    <string name="na_he_chive">Chive</string>
    <string name="na_he_lemonbalm">Lemon balm</string>
    <string name="na_he_lovage">Lovage</string>
    <string name="na_he_marjoram">Marjoram</string>
    <string name="na_he_mint">Mint</string>
    <string name="na_he_oregano">Oregano</string>
    <string name="na_he_parsley">Parsley</string>
    <string name="na_he_rosemary">Rosemary</string>
    <string name="na_he_sage">Sage</string>
    <string name="na_he_tarragon">Tarragon</string>
    <string name="na_he_thyme">Thyme</string>
    <string name="fl_af_algeria_dz">Algeria</string>
    <string name="fl_af_angola_ao">Angola</string>
    <string name="fl_af_benin_bj">Benin</string>
    <string name="fl_af_botswana_bw">Botswana</string>
    <string name="fl_af_burkina_faso_bf">Burkina Faso</string>
    <string name="fl_af_burundi_bi">Burundi</string>
    <string name="fl_af_cameroon_cm">Cameroon</string>
    <string name="fl_af_cape_verde_cv">Cape Verde</string>
    <string name="fl_af_the_central_african_republic_cf">The Central African Republic</string>
    <string name="fl_af_chad_td">Chad</string>
    <string name="fl_af_the_comoros_km">The Comoros</string>
    <string name="fl_af_ivory_coast_ci">Ivory Coast</string>
    <string name="fl_af_the_democratic_republic_of_the_congo_cd">The Democratic Republic of Congo</string>
    <string name="fl_af_djibouti_dj">Djibouti</string>
    <string name="fl_af_egypt_eg">Egypt</string>
    <string name="fl_af_equatorial_guinea_gq">Equatorial Guinea</string>
    <string name="fl_af_eritrea_er">Eritrea</string>
    <string name="fl_af_ethiopia_et">Ethiopia</string>
    <string name="fl_af_gabon_ga">Gabon</string>
    <string name="fl_af_the_gambia_gm">Gambia</string>
    <string name="fl_af_ghana_gh">Ghana</string>
    <string name="fl_af_guinea_gn">Guinea</string>
    <string name="fl_af_guinea_bissau_gw">Guinea-Bissau</string>
    <string name="fl_af_kenya_ke">Kenya</string>
    <string name="fl_af_lesotho_ls">Lesotho</string>
    <string name="fl_af_liberia_lr">Liberia</string>
    <string name="fl_af_libya_ly">Libya</string>
    <string name="fl_af_madagascar_mg">Madagascar</string>
    <string name="fl_af_malawi_mw">Malawi</string>
    <string name="fl_af_mali_ml">Mali</string>
    <string name="fl_af_mauritania_mr">Mauritania</string>
    <string name="fl_af_mauritius_mu">Mauritius</string>
    <string name="fl_af_morocco_ma">Morocco</string>
    <string name="fl_af_mozambique_mz">Mozambique</string>
    <string name="fl_af_namibia_na">Namibia</string>
    <string name="fl_af_niger_ne">Niger</string>
    <string name="fl_af_nigeria_ng">Nigeria</string>
    <string name="fl_af_the_republic_of_the_congo_cg">The Republic of the Congo</string>
    <string name="fl_af_rwanda_rw">Rwanda</string>
    <string name="fl_af_sao_tome_and_principe_st">São Tomé and Príncipe</string>
    <string name="fl_af_senegal_sn">Senegal</string>
    <string name="fl_af_the_seychelles_sc">The Seychelles</string>
    <string name="fl_af_sierra_leone_sl">Sierra Leone</string>
    <string name="fl_af_somalia_so">Somalia</string>
    <string name="fl_af_south_africa_za">South Africa</string>
    <string name="fl_af_south_sudan_sdn">South Sudan</string>
    <string name="fl_af_sudan_sd">Sudan</string>
    <string name="fl_af_swaziland_sz">Swaziland</string>
    <string name="fl_af_tanzania_tz">Tanzania</string>
    <string name="fl_af_togo_tg">Togo</string>
    <string name="fl_af_tunisia_tn">Tunisia</string>
    <string name="fl_af_uganda_ug">Uganda</string>
    <string name="fl_af_western_sahara_eh">Western Sahara</string>
    <string name="fl_af_zambia_zm">Zambia</string>
    <string name="fl_af_zimbabwe_zw">Zimbabwe</string>
    <string name="fl_as_afghanistan_af">Afghanistan</string>
    <string name="fl_as_armenia_am">Armenia</string>
    <string name="fl_as_azerbaijan_az">Azerbaijan</string>
    <string name="fl_as_bahrain_bh">Bahrain</string>
    <string name="fl_as_bangladesh_bd">Bangladesh</string>
    <string name="fl_as_bhutan_bt">Bhutan</string>
    <string name="fl_as_brunei_bn">Brunei</string>
    <string name="fl_as_cambodia_kh">Cambodia</string>
    <string name="fl_as_cyprus_cy">Cyprus</string>
    <string name="fl_as_east_timor_tl">East Timor</string>
    <string name="fl_as_egypt_eg">Egypt</string>
    <string name="fl_as_georgia_ge">Georgia</string>
    <string name="fl_as_india_in">India</string>
    <string name="fl_as_indonesia_id">Indonesia</string>
    <string name="fl_as_iran_ir">Iran</string>
    <string name="fl_as_iraq_iq">Iraq</string>
    <string name="fl_as_israel_il">Israel</string>
    <string name="fl_as_japan_jp">Japan</string>
    <string name="fl_as_jordan_jo">Jordan</string>
    <string name="fl_as_kazakhstan_kz">Kazakhstan</string>
    <string name="fl_as_kuwait_kw">Kuwait</string>
    <string name="fl_as_kyrgyzstan_kg">Kyrgyzstan</string>
    <string name="fl_as_laos_la">Laos</string>
    <string name="fl_as_lebanon_lb">Lebanon</string>
    <string name="fl_as_malaysia_my">Malaysia</string>
    <string name="fl_as_maldives_mv">Maldives</string>
    <string name="fl_as_mongolia_mn">Mongolia</string>
    <string name="fl_as_myanmar_mm">Myanmar</string>
    <string name="fl_as_nepal_np">Nepal</string>
    <string name="fl_as_north_korea_kp">North Korea</string>
    <string name="fl_as_oman_om">Oman</string>
    <string name="fl_as_pakistan_pk">Pakistan</string>
    <string name="fl_as_the_peoples_republic_of_china_cn">The peoples republic of China</string>
    <string name="fl_as_the_philippines_ph">The Philippines</string>
    <string name="fl_as_qatar_qa">Qatar</string>
    <string name="fl_as_the_republic_of_china_tw">The republic of China</string>
    <string name="fl_as_russia_ru">Russia</string>
    <string name="fl_as_saudi_arabia_sa">Saudi Arabia</string>
    <string name="fl_as_singapore_sg">Singapore</string>
    <string name="nice">Nice game!</string>
    <string name="end">Quit playing</string>
    <string name="home">New Game</string>
    <string name="retry">Retry Game</string>
</resources>